# abm-amro-exercise

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  main.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
app/: __init__.py  __main__.py  core.py  logger.py  main.py  router.py
scripts/: build.sh  run-docker-tests.sh  run-docker.sh
tests/: conftest.py  test_client.py  test_integration.py  test_main.py  test_units.py
